# Life_3.0_doomsday_clock

./: .env.example  .gitignore  .trivyignore  CLAUDE.md  Makefile  docker-compose.override.yaml  docker-compose.yaml  package.json  readme.md  trivy.yaml  vercel.json
.github/workflows/: ci.yaml  security-ci-scan.yml  semgrep-ci-scan.yml  snyk-ci-scan.yml  trivy-ci-scan.yml
apps/docs/: life3_scenarios.md
apps/web/: .env.example  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
apps/web/src/: App.tsx  main.tsx
apps/web/src/hooks/: useClockData.ts
apps/web/src/lib/: graphqlClient.ts  mockData.ts  (+3 more)
config/trivy/: secret.yaml
docs/dev_plans/: init_dev_plan.md
docs/devsecops/: instruction.md
services/api-gateway/: .env.example  Dockerfile  go.mod  go.sum
services/intelligence/: .env.example  Dockerfile  pyproject.toml
services/intelligence/app/: api.py  config.py  db.py  grpc_server.py  models.py  scheduler.py
services/intelligence/app/classifier/: llm.py  pipeline.py
services/intelligence/app/classifier/prompts/: few_shot.yaml
services/intelligence/app/migrations/: 001_init.sql
services/intelligence/app/proto/: __init__.py
services/intelligence/app/scraper/: arxiv_scraper.py  base.py  fli.py  hackernews.py  reuters.py  runner.py
services/intelligence/tests/: test_api.py  test_classifier.py  test_runner.py  test_scrapers.py
services/quantum-sim/: .env.example  Dockerfile  pyproject.toml
services/quantum-sim/app/: api.py  grpc_server.py  runner.py
services/quantum-sim/app/circuits/: entropy.qasm
services/quantum-sim/tests/: test_api.py  test_runner.py
services/risk-engine/: .env.example  Cargo.toml  Dockerfile  build.rs
services/risk-engine/config/: scenario_weights.toml
services/risk-engine/src/: clients.rs  config.rs  grpc_server.rs  main.rs
services/risk-engine/src/clock/: mod.rs  state.rs
services/risk-engine/src/monte_carlo/: mod.rs
shared/proto/: clock.proto  entropy.proto  scenario.proto
shared/scripts/: gen_proto.sh  lint.sh  security_scan.sh  seed_db.sh  test.sh  vercel_build_web.sh  vercel_install_web.sh
(+21 files in other folders)
