[project]
name = "life3-intelligence"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "langchain>=0.2.0",
  "langchain-openai>=0.1.0",
  "langchain-community>=0.2.0",
  "arxiv>=2.1.0",
  "httpx>=0.27.0",
  "asyncpg>=0.29.0",
  "apscheduler>=3.10.0",
  "grpcio>=1.64.0",
  "grpcio-tools>=1.64.0",
  "protobuf>=4.25.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "feedparser>=6.0.0",
  "python-jose[cryptography]>=3.3.0",
  "tenacity>=8.3.0",
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "respx>=0.21.0", "ruff>=0.4.0"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
