[project]
name = "life3-quantum-sim"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "qiskit>=1.1.0",
  "qiskit-aer>=0.14.0",
  "grpcio>=1.64.0",
  "grpcio-tools>=1.64.0",
  "protobuf>=4.25.0",
  "pydantic>=2.7.0",
  "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.4.0", "scipy>=1.13.0", "httpx>=0.27.0"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
