[package]
name = "risk-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
rand = "0.8"
rand_chacha = "0.3"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = "0.1"
futures = "0.3"

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "risk-engine"
path = "src/main.rs"
